_includes/assets/css/inline.css
:root {
	--background: rgb(247, 249,  );
	--white: white;
	--blue: rgb(91, 195, 235);
	--orange: rgb(243, 117, 101);
}

*, *:before, *:after {
  box-sizing: border-box;
}

html,
body {
	padding: 0;
	margin: 0;
	font-family: "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
}

body {
	display: grid;
	grid-template-rows: auto;
	grid-template-columns: 25% 25% 25% 25%;
	grid-template-areas: 
		". header header ."
		"social main main ."
		"footer footer footer footer";
	background-color: var(--background);
}

header {
	grid-area: header;
	width: 100%;
	background-color: var(--blue);
}

main {
	grid-area: main;
	max-width: 37.5em;
	max-width: 700px;
	margin: 0 auto;
}

.social {
	grid-area: social;
}

footer {
	grid-area: footer;
}

title {
	color: var(--white);
}

title:hover {
	background-color: var(--orange);
}

p,
pre,
code {
	line-height: 1.5;
}

a {
  text-decoration: none;
	position: relative;
}


/* Use this for underlining stuff on hover

a:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0%;
  border-bottom: 2px solid var(--white);
  transition: 0.4s;
}

a:hover:after {
  width: 100%;
} */

a[href] {
	color: var(--white);
}

a[href]:not(:hover) {
	text-decoration: none;
}

header,
main,
footer {
	padding: 1em;
}

main {
	padding-bottom: 2em;
}

main :first-child,
main > article :first-child {
	margin-top: 0;
}

pre {
	font-size: 14px;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	-moz-tab-size: 2;
	tab-size: 2;
	-webkit-hyphens: none;
	-moz-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	padding: 1em;
	margin: .5em 0;
}

ul {
	padding: 0;
	list-style: none;
}

/* Header Logo (style as h2) */
header > em {
	display: block;
	font-size: 2em;
	margin: .67em 0;
	text-align: center;
	font-weight: bold;
	font-style: normal;
}

/* Header Nav */
header nav {
	text-align: center;
}

header nav ul :first-child {
	margin-left: 0;
}

header nav li {
	display: inline-block;
	margin: 0 .5em;
}

header nav li a[href]:not(:hover) {
	text-decoration: none;
}

header nav li a[data-current="current item"] {
	font-weight: 700;
	text-decoration: underline;
}

li > a:hover {
	color: var(--orange);
	font-weight: bold;
	transition: 0.2s;

}

/* Posts List */
article {
	margin-bottom: 1em;
	padding-bottom: 1em;
	border-bottom: 1px solid #eee;
	border-bottom: 1px solid var(--white);
}

main > section > article > * {
	margin-top: 0;
	margin-bottom: .5em;
}

/* Post Tags */
a[rel="tag"],
a[rel="tag"]:visited {
	display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
	letter-spacing: .1em;
  font-size: .625em;
  padding: 0 .5em;
	line-height: 2em;
	height: 2em;
  border: 1px solid var(--white);
	background-color: var(--white);
	border: 1px solid var(--orange);
	color: var(--orange);
  border-radius: .25em;
  text-decoration: none;
	margin: 0 .5em .5em 0;
}

a[rel="tag"]:hover {
	background-color: var(--orange);
	color: var(--white);
}

a[rel="tag"]:last-child {
	margin-right: 0;
}

/* Contact Form */
form {
  display: grid;
	padding: 2em 0;
}

form label {
  display: none;
}

input,
textarea,
button {
  width: 100%;
  padding: 1em;
  margin-bottom: 1em;
	font-size: 1rem;
	font-family: "Avenir", "Avenir Next", sans-serif;
}

input,
textarea {
	border: 1px solid black;
}

.postTitle > a[href]{
	color: var(--blue);
}

footer, footer a {
	color: var(--blue) !important;
}

button {
	border: 1px solid var(--orange);
	background-color: var(--orange);
	color: var(--white);
	cursor: pointer;
}

@media screen and (min-width:768px) {
	:root {
		font-size: 1.1rem;
	}
}

